src/styles/app.styl
@import 'variables/*'
@import '_typography'
@import '_buttons'
@import '_inputs'
@import '_common'
@import 'components/*'
@import '_print'

#page-content
  background-color $contentBackgroundColor
  padding 0 4rem 0 4rem
  overflow-x hidden
  h2:first-child
    margin-top 2rem
  .text:last-child
    margin-bottom 2rem

@media (max-width: 960px)
  #page-content
    padding 0 2rem 0 2rem

.bg-paper
  background $paperBackgroundColor !important

.embed-img
  border solid $embeddedImgBordercolor 1px
  max-width 500px
  margin auto
  width 100%

